# SerialDebugAssistant

./: CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
doc/: README.md
enc_temp_folder/fe9f78fefad01a7d7ae149ef3ad0bfcb/: MainWindow.cpp
src/: CMakeLists.txt  main.cpp
src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/method/: CMakeLists.txt  SerialWatcher.cpp  SerialWatcher.h
